--- a/SolkAdmin.UI/Web.config
+++ b/SolkAdmin.UI/Web.config
@@ -4,12 +4,35 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <configSections>
+    <section name="LogSettings" type="System.Configuration.NameValueSectionHandler" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="data source=DESKTOP-E8G0TL8;initial catalog=Solk;user id=sa;password=Qwer1234;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="SMS_GatewayURL" value="https://sms.gateway.lk" />
+    <add key="SMS_Gateway_AuthCode" value="123" />
+    <add key="Token_Url" value="http://andromeda.teamiva.tk:8080/token" />
+    <add key="UTC_Offset" value="5.5" />
+    <add key="REQUEST_EXPIRE_WINDOW" value="1" />
+    <add key="HOURS_TO_FOLLOW_UP" value="3" />
+    <add key="NOTIFICATION_TITLE" value="SOLK" />
   </appSettings>
+  <LogSettings>
+    <add key="LogDirectory" value="F:\IVA\App\Web\IVA.FindExpert\IVA.FindExpert\Logs" />
+    <add key="LogFile" value="log1.txt" />
+    <add key="MaxAgeInSeconds" value="1" />
+    <add key="MaxQueueSize" value="1" />
+    <add key="RollingAppenderSizeKB" value="0" />
+  </LogSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
@@ -55,6 +78,12 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
   </system.webServer>
   <system.codedom>
     <compilers>
@@ -62,4 +91,14 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v13.0" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
