completed adding initial files and project structure.

--- a/SolkAdmin.UI/SolkAdmin.UI.csproj
+++ b/SolkAdmin.UI/SolkAdmin.UI.csproj
@@ -206,8 +206,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\View.cshtml" />
-    <Content Include="Views\ServiceRequest\ServiceRequest.cshtml" />
+    <Content Include="Views\ServiceRequest\Get.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
