--- a/SolkAdmin.UI/SolkAdmin.UI.csproj
+++ b/SolkAdmin.UI/SolkAdmin.UI.csproj
@@ -164,6 +164,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\ExtensionMethod.cs" />
+    <Compile Include="Helpers\SendSMS.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DomainViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -192,6 +193,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Views\ServiceRequest\SendQuote.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
