--- a/SolkAdmin.UI/Web.config
+++ b/SolkAdmin.UI/Web.config
@@ -18,17 +18,15 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--<add key="SMS_GatewayURL" value="https://sms.gateway.lk" />
-    <add key="SMS_Gateway_AuthCode" value="123" />-->
+    <add key="SMS_GatewayURL" value="https://sms.gateway.lk" />
+    <add key="SMS_Gateway_AuthCode" value="123" />
     <add key="Token_Url" value="http://andromeda.teamiva.tk:8080/token" />
     <add key="UTC_Offset" value="5.5" />
     <add key="REQUEST_EXPIRE_WINDOW" value="1" />
     <add key="HOURS_TO_FOLLOW_UP" value="3" />
     <add key="NOTIFICATION_TITLE" value="SOLK" />
 
-      <add key="SMS_GatewayURL" value="https://cpsolutions.dialog.lk/index.php/cbs/sms/send" />
-      <add key="SMS_Gateway_AuthCode" value="14997490698222"/>
-
+      
     <add key="LogFilePath" value="C:\TeamIVA\Logs\SolkAdmin\SmsSentLog.txt" />
   
   </appSettings>
