--- a/SolkAdmin.UI/Web.config
+++ b/SolkAdmin.UI/Web.config
@@ -19,8 +19,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SMS_GatewayURL" value="https://cpsolutions.dialog.lk/index.php/cbs/sms/send" />
-    <add key="SMS_Gateway_AuthCode" value="14997490698222"/>
+    <add key="SMS_GatewayURL" value="xxx" />
+    <add key="SMS_Gateway_AuthCode" value="fff"/>
     <add key="Token_Url" value="http://andromeda.teamiva.tk:8080/token" />
     <add key="UTC_Offset" value="5.5" />
     <add key="REQUEST_EXPIRE_WINDOW" value="1" />
