--- a/SolkAdmin.UI/Web.config
+++ b/SolkAdmin.UI/Web.config
@@ -19,8 +19,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SMS_GatewayURL" value="xxx" />
-    <add key="SMS_Gateway_AuthCode" value="fff"/>
+    
     <add key="Token_Url" value="http://andromeda.teamiva.tk:8080/token" />
     <add key="UTC_Offset" value="5.5" />
     <add key="REQUEST_EXPIRE_WINDOW" value="1" />
@@ -29,8 +28,20 @@
 
 
     <add key="LogFilePath" value="C:\TeamIVA\Logs\SolkAdmin\SmsSentLog.txt" />
+    
+    <!--Dialog-->
+    <add key="SMS_GatewayURL" value="https://sms.send" />
+    <add key="SMS_Gateway_AuthCode" value="123" />
+    
+    <!--Lankabell-->
+    <add key="BellSMSURL" value="http://sms.send" />
+    <add key="BellSMSCompanyId" value="123" />
+    <add key="BellSMSPassword" value="123" />
+    
+    <add key="SendUsingBell" value="true" />
 
   </appSettings>
+  
   <LogSettings>
     <add key="LogDirectory" value="C:\TeamIVA\Logs\SolkAdmin" />
     <add key="LogFile" value="log1.txt" />
@@ -53,7 +64,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
